Add policies for database
* Drop mentions about *-db-drop jobs
* Drop mentions about image-repo-sync jobs
* Drop unused db-indexer job for metric
* Add labels to all job childs
* Add network policies for database

Related-Prod: PRODX-34762
Change-Id: I399715f09bb2d079b1d9b8c003d25b584caacdea

--- a/openstack_controller/templates/base/network_policies/database.yaml
+++ b/openstack_controller/templates/base/network_policies/database.yaml
@@ -1,3 +1,4 @@
+{%- from 'macros/connections.j2' import from_pod_networks %}
         mariadb-server:
           spec:
             podSelector:
@@ -8,3 +9,5 @@
             - Ingress
             ingress:
 {{ network_policies["ingress"]["database:mariadb:StatefulSet:mariadb-server"] | toyaml | indent(14, first=True) }}
+              - from:
+{{ from_pod_networks(pod_networks) | indent(18) }}
