--- a/openstack_controller/templates/child_objects/descheduler.yaml
+++ b/openstack_controller/templates/child_objects/descheduler.yaml
@@ -5,3 +5,6 @@ descheduler:
       images:
       - descheduler
       manifest: cronjob
+      pod_labels:
+        application: descheduler
+        component: descheduler
