--- a/tests/fixtures/render_service_template/output/database/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/database/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -99,6 +99,9 @@ spec:
             ingress:
               - from:
                 - default: selector
+              - from:
+                 - ipBlock:
+                     cidr: 192.168.0.0/16
             podSelector:
               matchLabels:
                 application: mariadb
