--- a/openstack_controller/templates/child_objects/identity.yaml
+++ b/openstack_controller/templates/child_objects/identity.yaml
@@ -30,6 +30,9 @@ keystone:
       - name: ks-pub
         port: 5000
         protocol: TCP
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     keystone-client:
       connections:
         egress:
@@ -43,6 +46,9 @@ keystone:
         component: client
   Job:
     keystone-bootstrap:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - endpoints.*
       images:
@@ -68,15 +74,6 @@ keystone:
       pod_labels:
         application: keystone
         component: credential-setup
-    keystone-db-drop:
-      hash_fields:
-      - endpoints.oslo_db.*
-      images:
-      - db_drop
-      manifest: job_db_drop
-      pod_labels:
-        application: keystone
-        component: db-drop
     keystone-db-init:
       hash_fields:
       - endpoints.oslo_db.*
@@ -86,6 +83,9 @@ keystone:
       pod_labels:
         application: keystone
         component: db-init
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     keystone-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
@@ -96,6 +96,9 @@ keystone:
       pod_labels:
         application: keystone
         component: db-sync
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     keystone-db-sync-contract:
       hash_fields: []
       images:
@@ -104,6 +107,9 @@ keystone:
       pod_labels:
         application: keystone
         component: db-sync-contract
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     keystone-db-sync-expand:
       hash_fields: []
       images:
@@ -112,6 +118,9 @@ keystone:
       pod_labels:
         application: keystone
         component: db-sync-expand
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     keystone-db-sync-migrate:
       hash_fields: []
       images:
@@ -120,7 +129,13 @@ keystone:
       pod_labels:
         application: keystone
         component: db-sync-migrate
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     keystone-domain-manage:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - conf.*
       images:
@@ -130,6 +145,9 @@ keystone:
         application: keystone
         component: domain-manage
     keystone-federations-create:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - bootstrap
@@ -148,6 +166,9 @@ keystone:
         application: keystone
         component: fernet-setup
     keystone-ks-user:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_user
@@ -156,16 +177,16 @@ keystone:
         application: keystone
         component: ks-user
     osctl-ks-user:
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
       hash_fields:
       - endpoints.*
       images:
       - ks_user
       manifest: job_ks_user
-rabbitmq:
-  Job:
-    openstack-keystone-rabbitmq-cluster-wait:
-      hash_fields:
-      - endpoints.oslo_messaging.*
-      images:
-      - rabbitmq_scripted_test
-      manifest: job_cluster_wait
+      pod_labels:
+        application: keystone
+        component: ks-user
+        job-name: osctl-ks-user
+
