--- a/openstack_controller/templates/child_objects/image.yaml
+++ b/openstack_controller/templates/child_objects/image.yaml
@@ -9,11 +9,15 @@ glance:
       pod_labels:
         application: glance
         component: db-purge
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
   Deployment:
     glance-api:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - glance_api
@@ -25,6 +29,7 @@ glance:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - glance_registry
@@ -77,15 +82,9 @@ glance:
       pod_labels:
         application: glance
         component: db-contract
-    glance-db-drop:
-      hash_fields:
-      - endpoints.oslo_db.*
-      images:
-      - db_drop
-      manifest: job_db_drop
-      pod_labels:
-        application: glance
-        component: db-drop
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     glance-db-expand:
       hash_fields: []
       images:
@@ -94,6 +93,9 @@ glance:
       pod_labels:
         application: glance
         component: db-expand
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     glance-db-init:
       hash_fields:
       - endpoints.oslo_db.*
@@ -103,6 +105,9 @@ glance:
       pod_labels:
         application: glance
         component: db-init
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     glance-db-migrate:
       hash_fields: []
       images:
@@ -111,6 +116,9 @@ glance:
       pod_labels:
         application: glance
         component: db-migrate
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     glance-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
@@ -120,6 +128,9 @@ glance:
       pod_labels:
         application: glance
         component: db-sync
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     glance-ks-endpoints:
       connections:
         egress:
@@ -174,11 +185,3 @@ glance:
       pod_labels:
         application: glance
         component: storage-init
-rabbitmq:
-  Job:
-    openstack-glance-rabbitmq-cluster-wait:
-      hash_fields:
-      - endpoints.oslo_messaging.*
-      images:
-      - rabbitmq_scripted_test
-      manifest: job_cluster_wait
