--- a/openstack_controller/templates/child_objects/instance-ha.yaml
+++ b/openstack_controller/templates/child_objects/instance-ha.yaml
@@ -9,6 +9,9 @@ masakari:
       pod_labels:
         application: masakari
         component: db-purge
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
   DaemonSet:
     masakari-monitors:
       connections:
@@ -29,6 +32,7 @@ masakari:
         egress:
           - {{ to_child_object("coordination", "etcd", "StatefulSet", "etcd-etcd", ["client"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - masakari_api
@@ -41,6 +45,7 @@ masakari:
         egress:
           - {{ to_child_object("coordination", "etcd", "StatefulSet", "etcd-etcd", ["client"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - masakari_engine
@@ -59,15 +64,9 @@ masakari:
       pod_labels:
         application: masakari
         component: bootstrap
-    masakari-db-drop:
-      hash_fields:
-      - endpoints.oslo_db.*
-      images:
-      - db_drop
-      manifest: job_db_drop
-      pod_labels:
-        application: masakari
-        component: db-drop
+      connections:
+        egress:
+          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
     masakari-db-init:
       hash_fields:
       - endpoints.oslo_db.*
@@ -77,6 +76,9 @@ masakari:
       pod_labels:
         application: masakari
         component: db-init
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     masakari-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
@@ -86,6 +88,9 @@ masakari:
       pod_labels:
         application: masakari
         component: db-sync
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     masakari-ks-endpoints:
       connections:
         egress:
