--- a/openstack_controller/templates/child_objects/key-manager.yaml
+++ b/openstack_controller/templates/child_objects/key-manager.yaml
@@ -9,11 +9,15 @@ barbican:
       pod_labels:
         application: barbican
         component: db-purge
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
   Deployment:
     barbican-api:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - barbican_api
@@ -32,15 +36,6 @@ barbican:
       pod_labels:
         application: barbican
         component: bootstrap
-    barbican-db-drop:
-      hash_fields:
-      - endpoints.oslo_db.*
-      images:
-      - db_drop
-      manifest: job_db_drop
-      pod_labels:
-        application: barbican
-        component: db-drop
     barbican-db-init:
       hash_fields:
       - endpoints.oslo_db.*
@@ -50,6 +45,9 @@ barbican:
       pod_labels:
         application: barbican
         component: db-init
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     barbican-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
@@ -59,6 +57,9 @@ barbican:
       pod_labels:
         application: barbican
         component: db-sync
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     barbican-ks-endpoints:
       connections:
         egress:
@@ -93,11 +94,3 @@ barbican:
       pod_labels:
         application: barbican
         component: ks-user
-rabbitmq:
-  Job:
-    openstack-barbican-rabbitmq-cluster-wait:
-      hash_fields:
-      - endpoints.oslo_messaging.*
-      images:
-      - rabbitmq_scripted_test
-      manifest: job_cluster_wait
