--- a/openstack_controller/templates/child_objects/load-balancer.yaml
+++ b/openstack_controller/templates/child_objects/load-balancer.yaml
@@ -5,6 +5,7 @@ octavia:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - openvswitch_vswitchd
@@ -19,6 +20,7 @@ octavia:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - octavia_api
@@ -31,6 +33,7 @@ octavia:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - octavia_housekeeping
@@ -42,6 +45,7 @@ octavia:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - octavia_worker
@@ -77,15 +81,6 @@ octavia:
       pod_labels:
         application: octavia
         component: create_resources
-    octavia-db-drop:
-      hash_fields:
-      - endpoints.oslo_db.*
-      images:
-      - db_drop
-      manifest: job_db_drop
-      pod_labels:
-        application: octavia
-        component: db-drop
     octavia-db-init:
       hash_fields:
       - endpoints.oslo_db.*
@@ -95,6 +90,9 @@ octavia:
       pod_labels:
         application: octavia
         component: db-init
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     octavia-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
@@ -104,6 +102,9 @@ octavia:
       pod_labels:
         application: octavia
         component: db-sync
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     octavia-db-sync-persistence:
       hash_fields:
       - endpoints.oslo_db.*
@@ -113,6 +114,9 @@ octavia:
       pod_labels:
         application: octavia
         component: db-sync-persistence
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     octavia-ks-endpoints:
       connections:
         egress:
@@ -147,11 +151,3 @@ octavia:
       pod_labels:
         application: octavia
         component: ks-user
-rabbitmq:
-  Job:
-    openstack-octavia-rabbitmq-cluster-wait:
-      hash_fields:
-      - endpoints.oslo_messaging.*
-      images:
-      - rabbitmq_scripted_test
-      manifest: job_cluster_wait
