--- a/openstack_controller/templates/child_objects/orchestration.yaml
+++ b/openstack_controller/templates/child_objects/orchestration.yaml
@@ -9,10 +9,14 @@ heat:
       pod_labels:
         application: heat
         component: db-purge
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     heat-engine-cleaner:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - heat_engine_cleaner
@@ -25,6 +29,7 @@ heat:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - heat_api
@@ -36,6 +41,7 @@ heat:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - heat_cfn
@@ -47,6 +53,7 @@ heat:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - heat_cloudwatch
@@ -58,6 +65,7 @@ heat:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - heat_engine
@@ -79,15 +87,6 @@ heat:
       pod_labels:
         application: heat
         component: bootstrap
-    heat-db-drop:
-      hash_fields:
-      - endpoints.oslo_db.*
-      images:
-      - db_drop
-      manifest: job_db_drop
-      pod_labels:
-        application: heat
-        component: db-drop
     heat-db-init:
       hash_fields:
       - endpoints.oslo_db.*
@@ -97,6 +96,9 @@ heat:
       pod_labels:
         application: heat
         component: db-init
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     heat-db-sync:
       hash_fields:
       - endpoints.oslo_db.*
@@ -106,6 +108,9 @@ heat:
       pod_labels:
         application: heat
         component: db-sync
+      connections:
+        egress:
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
     heat-domain-ks-user:
       connections:
         egress:
@@ -182,6 +187,7 @@ heat:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
       hash_fields: []
       images:
       - heat_engine
@@ -189,11 +195,3 @@ heat:
       pod_labels:
         application: heat
         component: engine
-rabbitmq:
-  Job:
-    openstack-heat-rabbitmq-cluster-wait:
-      hash_fields:
-      - endpoints.oslo_messaging.*
-      images:
-      - rabbitmq_scripted_test
-      manifest: job_cluster_wait
